# BaseAL

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  test.py
ESC10_BASEAL/: labels.csv  metadata.csv
ESC10_BASEAL/embeddings/birdnet/: 1-100032-A-0_000_003_birdnet.npy  1-110389-A-0_000_003.npy  1-116765-A-41_000_003.npy  1-116765-A-41_003_006.npy  1-17150-A-12_000_003.npy  1-17150-A-12_003_006_birdnet.npy  1-172649-A-40_000_003.npy  1-172649-A-40_003_006_birdnet.npy  1-172649-B-40_000_003.npy  1-172649-B-40_003_006_birdnet.npy  1-172649-C-40_000_003.npy  1-172649-C-40_003_006_birdnet.npy  1-172649-D-40_000_003.npy  1-172649-D-40_003_006.npy  1-172649-E-40_000_003_birdnet.npy  1-172649-E-40_003_006_birdnet.npy  1-172649-F-40_000_003_birdnet.npy  1-172649-F-40_003_006_birdnet.npy  1-17367-A-10_000_003_birdnet.npy  1-17367-A-10_003_006_birdnet.npy  1-17565-A-12_000_003.npy  1-17565-A-12_003_006_birdnet.npy  1-17742-A-12_000_003.npy  1-17742-A-12_003_006.npy  1-17808-A-12_000_003_birdnet.npy  1-17808-A-12_003_006.npy  1-17808-B-12_000_003_birdnet.npy  1-17808-B-12_003_006_birdnet.npy  1-181071-A-40_000_003_birdnet.npy  1-181071-A-40_003_006_birdnet.npy  1-181071-B-40_000_003.npy  1-181071-B-40_003_006.npy  1-187207-A-20_000_003_birdnet.npy  1-187207-A-20_003_006.npy  1-19898-A-41_000_003_birdnet.npy  1-19898-A-41_003_006.npy  1-19898-B-41_000_003.npy  1-19898-B-41_003_006_birdnet.npy  1-19898-C-41_000_003.npy  1-19898-C-41_003_006.npy  (+733 more)
api/: README.md  main.py  requirements.txt
app/: .env.production  index.html  package-lock.json  package.json  vite.config.js
app/public/profiles/: rupa_kurinchi_vendhan.jfif
app/src/: App.jsx  index.css
app/src/components/: ALTool.jsx  Analytics.jsx  AnalyticsV2.jsx  Axes.jsx  Challenges.jsx  ComparisonChart.jsx  Docs.jsx  Home.jsx  ManagerPanel.jsx  NotebookRenderer.jsx  PointCluster.jsx  Promote.jsx  ReliabilityChart.jsx  Viewer.jsx
app/src/components/pages/: Baselines.jsx  BioDCASE.jsx  Datasets.jsx  Setup.jsx
app/src/utils/: apiClient.js  generatePoints.js
apptainer_build/: baseal.def
core/: .gitignore  __init__.py  active_learner.py  config.yml  model.py  pipeline.py
core/baselines/: average_results.py  baseline_ATBFL.ipynb  baseline_ESC10.ipynb  baseline_HSN.ipynb  baseline_POW.ipynb  baseline_UHH.ipynb  baseline_eval.ipynb
core/baselines/results/ATBFL/: margin_multilabel_ATBFL_BASEAL.yaml  random_ATBFL_BASEAL.yaml  sklearn_coreset_ATBFL_BASEAL.yaml  sklearn_typiclust_ATBFL_BASEAL.yaml
core/baselines/results/HSN/: margin_multilabel_BirdSet_BASEAL_HSN_BASEAL.yaml  random_BirdSet_BASEAL_HSN_BASEAL.yaml  sklearn_coreset_BirdSet_BASEAL_HSN_BASEAL.yaml  sklearn_typiclust_BirdSet_BASEAL_HSN_BASEAL.yaml
core/baselines/results/POW/: margin_multilabel_BirdSet_BASEAL_POW_BASEAL.yaml  random_BirdSet_BASEAL_POW_BASEAL.yaml  sklearn_coreset_BirdSet_BASEAL_POW_BASEAL.yaml  sklearn_typiclust_BirdSet_BASEAL_POW_BASEAL.yaml
core/baselines/results/UHH/: margin_multilabel_BirdSet_BASEAL_UHH_BASEAL.yaml  random_BirdSet_BASEAL_UHH_BASEAL.yaml  sklearn_coreset_BirdSet_BASEAL_UHH_BASEAL.yaml  sklearn_typiclust_BirdSet_BASEAL_UHH_BASEAL.yaml
core/docs/: 00_introduction.ipynb  01_getting_started.ipynb  01_understanding_data.ipynb  02_neural_network_model.ipynb  02_understanding_data.ipynb  03_active_learning_loop.ipynb  03_neural_network_model.ipynb  04_active_learning_loop.ipynb  04_visualization_pca.ipynb  05_complete_pipeline.ipynb  06_experiment_manager.ipynb  07_vis_example.ipynb  08_challenge_participant.ipynb  biodcase_example.ipynb  example.ipynb
core/utils/: model.py  sampling.py  visualization.py
