[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BaseAL"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bacpipe>=1.2.0",
    "ipykernel>=7.1.0",
    "soundfile>=0.12.1",
    "torch>=2.6",
    "scikit-learn>=1.7.1",
    "pandas>=2.2.3",
    "tensorflow>=2.20.0; sys_platform == 'linux'",
    "librosa>=0.10.0",
    "matplotlib>=3.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.2",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "python-multipart>=0.0.6",
    "umap-learn",
    "scikit-activeml>=0.6.2",
    "nvidia-cublas-cu12==12.5.2.13; sys_platform == 'linux'",
    "nvidia-cuda-cccl-cu12==12.5.39.post1; sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.5.39; sys_platform == 'linux'",
    "nvidia-cuda-cuxxfilt-cu12==12.5.39; sys_platform == 'linux'",
    "nvidia-cuda-nvcc-cu12==12.5.40; sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.5.40; sys_platform == 'linux'",
    "nvidia-cuda-opencl-cu12==12.5.39; sys_platform == 'linux'",
    "nvidia-cuda-profiler-api-cu12==12.5.39; sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.5.39; sys_platform == 'linux'",
    "nvidia-cuda-sanitizer-api-cu12==12.5.39; sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.3.0.75; sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.2.3.18; sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.6.39; sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.6.2.40; sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.4.1.24; sys_platform == 'linux'",
    "nvidia-cusparselt-cu12==0.6.2; sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.21.5; sys_platform == 'linux'",
    "nvidia-npp-cu12==12.3.0.116; sys_platform == 'linux'",
    "nvidia-nvfatbin-cu12==12.5.39; sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.5.40; sys_platform == 'linux'",
    "nvidia-nvjpeg-cu12==12.3.2.38; sys_platform == 'linux'",
    "nvidia-nvml-dev-cu12==12.5.39; sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.5.39; sys_platform == 'linux'"
]

[tool.setuptools]
packages = []  # No packages to include - BaseAL is a project root, not a package

[tool.uv]
# Override transitive dependencies for cross-platform compatibility
override-dependencies = [
    "tensorflow-io-gcs-filesystem>=0.37.1; sys_platform == 'linux'",
    "tensorflow-io>=0.37.1; sys_platform == 'linux'",
    "pyarrow>=21.0.0",
    "fsspec>=2024.9.0,<2025.4.0",
]
required-environments = ["sys_platform == 'linux' and python_full_version >= '3.11' and python_full_version < '3.13'"]

[tool.uv.sources]
bacpipe = { path = "./bacpipe" }
